Background intro fixed and overflow horizontal scrollbar hided

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,10 @@
     font-family: 'Public Sans', sans-serif;  
     font-weight: 400;
 }
-
+body
+{
+    overflow-x: hidden
+}
 /*Standards - START*/
 
 .standard_btn
@@ -197,6 +200,10 @@ body
     width: 100%;
 }
 
+.intro_container
+{
+    position: relative;
+}
 
 .intro_bg
 {
@@ -216,9 +223,8 @@ body
     flex: 1;
     background-image: url(../images/bg-intro-desktop.svg);
     background-repeat: no-repeat;
-    position: relative;
-    left: 15px;
-    top: -265px;
+    background-position-x: 15px;
+    background-position-y: -265px;
 }
 .intro
 {
